test/runnable/imports/test24a.d
module imports.test24a;

import std.stdio;
