test/fail_compilation/imports/a313.d
module imports.a313;

private import core.stdc.stdio;
